--- a/Interface/assets/pwa/manifest.json
+++ b/Interface/assets/pwa/manifest.json
@@ -3,9 +3,10 @@
   "short_name": "Almoçaí",
   "theme_color": "#438945",
   "background_color": "#fafafa",
-  "display": "fullscreen",
+  "display": "standalone",
   "orientation": "portrait",
-  "scope": "/Projetos/almocai/",
+  "scope": "/",
+  "lang": "pt-BR",
   "start_url": "/Projetos/almocai",
   "icons": [
     {
