--- a/Interface/assets/pwa/manifest.json
+++ b/Interface/assets/pwa/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Almoçaí",
   "short_name": "Almoçaí",
-  "theme_color": "#438945",
+  "theme_color": "#fafafa",
   "background_color": "#fafafa",
   "display": "standalone",
   "orientation": "portrait",
