--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "orientation": "portrait",
   "scope": "/almocai/",
   "lang": "pt-BR",
-  "start_url": "/almocai/offline.html",
+  "start_url": "/almocai/entrar/",
   "icons": [
     {
       "src": "assets/img/icons/icon-192x192.png",
