Melhorias no PWA
Alterado o start_url do PWA e adicionado service worker register à página inicial do Almoçaí - almocai/

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "orientation": "portrait",
   "scope": "/almocai/",
   "lang": "pt-BR",
-  "start_url": "/almocai/entrar/",
+  "start_url": "/almocai/",
   "icons": [
     {
       "src": "assets/img/icons/icon-192x192.png",
